tests/compile-fail/never_transmute_humans.stderr
error: Undefined Behavior: transmuting to uninhabited type
  --> $DIR/never_transmute_humans.rs:10:9
   |
LL |         std::mem::transmute::<Human, !>(Human) //~ ERROR transmuting to uninhabited
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ transmuting to uninhabited type
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/never_transmute_humans.rs:10:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

